Fix Nova Android contract test Java compatibility